# bayeso-benchmarks

./: .gitignore  .travis.yml  LICENSE  README.md  create_wheels_source.txt  publish_new_release.txt  pyproject.toml  setup.py
bayeso-benchmarks/: branin.py
bayeso_benchmarks/: __init__.py  benchmark_base.py  four_dim_colville.py  inf_dim_ackley.py  inf_dim_cosines.py  inf_dim_griewank.py  inf_dim_levy.py  inf_dim_rastrigin.py  inf_dim_rosenbrock.py  inf_dim_sphere.py  inf_dim_zakharov.py  one_dim_constant.py  one_dim_gramacyandlee2012.py  one_dim_linear.py  one_dim_step.py  plot_benchmarks.py  six_dim_hartmann6d.py  three_dim_hartmann3d.py  two_dim_beale.py  two_dim_bohachevsky.py  two_dim_branin.py  two_dim_bukin6.py  two_dim_dejong5.py  two_dim_dropwave.py  two_dim_easom.py  two_dim_eggholder.py  two_dim_goldsteinprice.py  two_dim_holdertable.py  two_dim_kim1.py  two_dim_kim2.py  two_dim_kim3.py  two_dim_michalewicz.py  two_dim_shubert.py  two_dim_sixhumpcamel.py  two_dim_threehumpcamel.py  utils.py
benchmarks/: __init__.py  benchmark_base.py  branin.py  inf_dim_ackley.py  inf_dim_cosines.py  inf_dim_rosenbrock.py  inf_dim_sphere.py  one_dim_constant.py  one_dim_gramacyandlee2012.py  one_dim_linear.py  one_dim_step.py  six_dim_hartmann6d.py  three_dim_hartmann3d.py  two_dim_beale.py  two_dim_bohachevsky.py  two_dim_branin.py  two_dim_eggholder.py  two_dim_goldsteinprice.py  two_dim_holdertable.py  two_dim_michalewicz.py  two_dim_sixhumpcamel.py  two_dim_threehumpcamel.py
examples/: find_global_minimum.py  plot_benchmarks.py
tests/: test_four_dim_colville.py  (+35 more)
(+1 files in other folders)
